PyMaker/datas/object2/RawHTML/i3001/Python_DOC_referPages.formatting-in-python.txt
<div class="post-text" itemprop="text">
<p>I have recently been learning python 3 and I cannot get any examples involving string interpolation (formatting) to work. </p>
<pre><code>In [1]: state = "Washington"

In [2]: state
Out[2]: 'Washington'

In [3]: my_message = f"I live in {state}"
File "&lt;ipython-input-3-d004dd9e0255&gt;", line 1
my_message = f"I live in {state}"
                                ^
SyntaxError: invalid syntax
</code></pre>
<p>I figured my machine was defaulting to python 2, but a quick check reveals:</p>
<pre><code>Python 3.5.2 (default, Nov 17 2016, 17:05:23) 
Type "copyright", "credits" or "license" for more information.

IPython 5.2.2 -- An enhanced Interactive Python.
</code></pre>
<p>I am on Ubuntu 16.04:</p>
<pre><code>python3 --version
Python 3.5.2
</code></pre>
<p>Am I just overlooking basic syntax? I have run the same commands on a few computers from fellow students and it seems to execute just fine.</p>
</div>
<div class="post-text" itemprop="text">
<p>As suggested by Josh Lee in the comment section, that kind of string interpolation was added in Python 3.6 only, see <a href="https://docs.python.org/3/whatsnew/3.6.html#pep-498-formatted-string-literals" rel="noreferrer">What’s New In Python 3.6</a> (here it's called "<a href="https://www.python.org/dev/peps/pep-0498" rel="noreferrer">PEP 498</a>: Formatted string literals").</p>
<p>You, however, seems to be using Python 3.5.2, which does not support that syntax.</p>
</div>
<span class="comment-copy">What version of python were the others using? You seem to have answered your own question. <a href="https://docs.python.org/3/whatsnew/3.6.html#pep-498-formatted-string-literals" rel="nofollow noreferrer">docs.python.org/3/whatsnew/…</a></span>
<span class="comment-copy">@yeputons, avoid answering questions in the comments. Add an answer.</span>
